tests/baselines/reference/asyncFunctionDeclaration2_es5(strict=true).errors.txt
asyncFunctionDeclaration2_es5.ts(1,12): error TS7006: Parameter 'await' implicitly has an 'any' type.


==== asyncFunctionDeclaration2_es5.ts (1 errors) ====
    function f(await) {
               ~~~~~
!!! error TS7006: Parameter 'await' implicitly has an 'any' type.
    }